@@ -23,8 +23,8 @@
     "- `(e)`, `e`.\n",
     "- `e+f`, the [addition](expression.sum.ipynb) (disjunction, union) of `e` and `f` (note the use of `+`, `|` is not accepted).\n",
     "- `e&f`, the [conjunction](expression.conjunction.ipynb) (intersection) of `e` and `f`.\n",
-    "- `e:f`, the [shuffle product](expression.shuffle.ipynb) (intersection) of `e` and `f`.\n",
-    "- `e&:f`, the [infiltration](expression.infiltration.ipynb) (intersection) of `e` and `f`.\n",
+    "- `e:f`, the [shuffle product](expression.shuffle.ipynb) (interleaving) of `e` and `f`.\n",
+    "- `e&:f`, the [infiltration](expression.infiltration.ipynb) of `e` and `f`.\n",
     "- `ef` and `e.f`, the [multiplication](expression.multiplication.ipynb) (concatenation) of `e` and `f`.\n",
     "- `<k>e`, the left exterior product (left-scalar product) of `e` by `k`.\n",
     "- `e<k>`, the right exterior product (right-scalar product) of `e` by `k`.\n",
@@ -98,6 +98,14 @@
     "  \\Ed \\cdot (\\lmulq{k}{\\und})   \\Rightarrow  \\rmulq{\\Ed}{k}\n",
     "  \\\\ %\\tag{star}\n",
     "  \\zed^\\star \\Rightarrow \\und\n",
+    "  \\\\\n",
+    "  \\zed^c \\& \\Ed \\Rightarrow \\Ed\n",
+    "  \\quad\n",
+    "  \\Ed \\& \\zed^c \\Rightarrow \\Ed\n",
+    "  \\\\\n",
+    "  (\\lmul{k}{\\Ed})^{c} \\Rightarrow \\Ed^{c} \\quad (\\rmul{\\Ed}{k})^{c} \\Rightarrow \\Ed^{c}\n",
+    "  \\\\\n",
+    "  {\\Ed^c}^c \\Rightarrow \\Ed \\text{ if the weights are Boolean ($\\mathbb{B}$ or $\\mathbb{F}_2$)}\n",
     "\\end{gather*}\n",
     "$$\n",
     "\n",
@@ -111,8 +119,9 @@
     "In addition to the trivial identities, the binary operators (addition, conjunction, multiplication) are made associative.  Actually, they become variadic instead of being strictly binary.\n",
     "$$\n",
     "\\begin{align}\n",
-    "  \\Ed+(\\Fd+\\Gd) & \\Rightarrow (\\Ed+\\Fd)+\\Gd\\\\\n",
-    "  \\Ed(\\Fd\\Gd)   & \\Rightarrow (\\Ed\\Fd)\\Gd\\\\\n",
+    "  \\Ed+(\\Fd+\\Gd) & \\Rightarrow \\Ed+\\Fd+\\Gd\\\\\n",
+    "  \\Ed(\\Fd\\Gd)   & \\Rightarrow \\Ed\\Fd\\Gd\\\\\n",
+    "  \\Ed\\&(\\Fd\\&\\Gd)   & \\Rightarrow \\Ed\\&\\Fd\\&\\Gd\\\\\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
@@ -457,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -486,38 +495,25 @@
        "      <td>$\\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right)^{*}$</td>\n",
        "      <td>$a \\, a \\, a \\, \\left(a \\oplus b\\right)^{*} \\oplus a \\, a \\, b \\, \\left(a \\oplus b\\right)^{*} \\oplus a \\, b \\, a \\, \\left(a \\oplus b\\right)^{*} \\oplus a \\, b \\, b \\, \\left(a \\oplus b\\right)^{*} \\oplus b \\, a \\, a \\, \\left(a \\oplus b\\right)^{*} \\oplus b \\, a \\, b \\, \\left(a \\oplus b\\right)^{*} \\oplus b \\, b \\, a \\, \\left(a \\oplus b\\right)^{*} \\oplus b \\, b \\, b \\, \\left(a \\oplus b\\right)^{*}$</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[ab]{3,}a</td>\n",
-       "      <td>$\\left(\\left(\\left(\\left(a + b\\right) \\, \\left(a + b\\right)\\right) \\, \\left(a + b\\right)\\right) \\, \\left(a + b\\right)^{*}\\right) \\, a$</td>\n",
-       "      <td>$\\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right)^{*} \\, a$</td>\n",
-       "      <td>$\\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right)^{*} \\, a$</td>\n",
-       "      <td>$a \\, a \\, a \\, \\left(a \\oplus b\\right)^{*} \\, a \\oplus a \\, a \\, b \\, \\left(a \\oplus b\\right)^{*} \\, a \\oplus a \\, b \\, a \\, \\left(a \\oplus b\\right)^{*} \\, a \\oplus a \\, b \\, b \\, \\left(a \\oplus b\\right)^{*} \\, a \\oplus b \\, a \\, a \\, \\left(a \\oplus b\\right)^{*} \\, a \\oplus b \\, a \\, b \\, \\left(a \\oplus b\\right)^{*} \\, a \\oplus b \\, b \\, a \\, \\left(a \\oplus b\\right)^{*} \\, a \\oplus b \\, b \\, b \\, \\left(a \\oplus b\\right)^{*} \\, a$</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Input  \\\n",
-       "0  [ab]{3,}    \n",
-       "1  [ab]{3,}a   \n",
+       "      Input  \\\n",
+       "0  [ab]{3,}   \n",
        "\n",
-       "                                                                                                                                  Trivial  \\\n",
-       "0  $\\left(\\left(\\left(a + b\\right) \\, \\left(a + b\\right)\\right) \\, \\left(a + b\\right)\\right) \\, \\left(a + b\\right)^{*}$                     \n",
-       "1  $\\left(\\left(\\left(\\left(a + b\\right) \\, \\left(a + b\\right)\\right) \\, \\left(a + b\\right)\\right) \\, \\left(a + b\\right)^{*}\\right) \\, a$   \n",
+       "                                                                                                                Trivial  \\\n",
+       "0  $\\left(\\left(\\left(a + b\\right) \\, \\left(a + b\\right)\\right) \\, \\left(a + b\\right)\\right) \\, \\left(a + b\\right)^{*}$   \n",
        "\n",
-       "                                                                                       Associative  \\\n",
-       "0  $\\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right)^{*}$        \n",
-       "1  $\\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right)^{*} \\, a$   \n",
+       "                                                                                  Associative  \\\n",
+       "0  $\\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right)^{*}$   \n",
        "\n",
-       "                                                                                            Linear  \\\n",
-       "0  $\\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right)^{*}$        \n",
-       "1  $\\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right)^{*} \\, a$   \n",
+       "                                                                                       Linear  \\\n",
+       "0  $\\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right) \\, \\left(a + b\\right)^{*}$   \n",
        "\n",
-       "                                                                                                                                                                                                                                                                                                                                                                                                                                         Distributive  \n",
-       "0  $a \\, a \\, a \\, \\left(a \\oplus b\\right)^{*} \\oplus a \\, a \\, b \\, \\left(a \\oplus b\\right)^{*} \\oplus a \\, b \\, a \\, \\left(a \\oplus b\\right)^{*} \\oplus a \\, b \\, b \\, \\left(a \\oplus b\\right)^{*} \\oplus b \\, a \\, a \\, \\left(a \\oplus b\\right)^{*} \\oplus b \\, a \\, b \\, \\left(a \\oplus b\\right)^{*} \\oplus b \\, b \\, a \\, \\left(a \\oplus b\\right)^{*} \\oplus b \\, b \\, b \\, \\left(a \\oplus b\\right)^{*}$                                          \n",
-       "1  $a \\, a \\, a \\, \\left(a \\oplus b\\right)^{*} \\, a \\oplus a \\, a \\, b \\, \\left(a \\oplus b\\right)^{*} \\, a \\oplus a \\, b \\, a \\, \\left(a \\oplus b\\right)^{*} \\, a \\oplus a \\, b \\, b \\, \\left(a \\oplus b\\right)^{*} \\, a \\oplus b \\, a \\, a \\, \\left(a \\oplus b\\right)^{*} \\, a \\oplus b \\, a \\, b \\, \\left(a \\oplus b\\right)^{*} \\, a \\oplus b \\, b \\, a \\, \\left(a \\oplus b\\right)^{*} \\, a \\oplus b \\, b \\, b \\, \\left(a \\oplus b\\right)^{*} \\, a$  "
+       "                                                                                                                                                                                                                                                                                                                                                                                                 Distributive  \n",
+       "0  $a \\, a \\, a \\, \\left(a \\oplus b\\right)^{*} \\oplus a \\, a \\, b \\, \\left(a \\oplus b\\right)^{*} \\oplus a \\, b \\, a \\, \\left(a \\oplus b\\right)^{*} \\oplus a \\, b \\, b \\, \\left(a \\oplus b\\right)^{*} \\oplus b \\, a \\, a \\, \\left(a \\oplus b\\right)^{*} \\oplus b \\, a \\, b \\, \\left(a \\oplus b\\right)^{*} \\oplus b \\, b \\, a \\, \\left(a \\oplus b\\right)^{*} \\oplus b \\, b \\, b \\, \\left(a \\oplus b\\right)^{*}$  "
       ]
      },
      "metadata": {},
